<resources>
    <string name="app_name">Dinopedia</string>
    <string name="class_name">Nama Kelas</string>
    <string name="dino_name">Nama Dino</string>
    <string name="dino_icon">Icon Dino</string>
    <string name="dino_desc">Deskripsi Dino</string>
    <string name="dino_char">Karakteristik Dino</string>
    <string name="dino_habit">Habitat Dino</string>
    <string name="dino_food">Makanan Dino</string>
    <string name="dino_longheight">Panjang dan Tinggi Dino</string>
    <string name="dino_weakness">Kelemahan</string>
    <string-array name="Kelompok_Dino">
        <item>Theropoda</item>
        <item>Ankylosauria</item>
        <item>Ceratopsia</item>
        <item>Hadrosauridae</item>
        <item>Pteurosauria</item>
        <item>Saurischia</item>
        <item>Sauropoda</item>
        <item>Triceratops</item>
    </string-array>
    <string-array name="Class_icon">
        <item>@drawable/theropoda</item>
        <item>@drawable/ankylosauria</item>
        <item>@drawable/ceratopsia</item>
        <item>@drawable/hadrosauridae</item>
        <item>@drawable/pterosauria</item>
        <item>@drawable/saurischia</item>
        <item>@drawable/sauropoda</item>
        <item>@drawable/triceratops</item>
    </string-array>
    <string-array name="Nama_Dino">
        <item>Tyrannosaurus Rex</item>
        <item>Velociraptor</item>
        <item>Allosaurus</item>

        <item>Ankylosaurus</item>
        <item>Nodocephalosaurus</item>
        <item>Euoplocephalus</item>

        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Protoceratops</item>

        <item>Hadrosaurus</item>
        <item>Parasaurolophus</item>
        <item>Edmontosaurus</item>

        <item>Pteranodon</item>
        <item>Quetzalcoatlus</item>
        <item>Rhamphorhynchus</item>

        <item>Brachiosaurus</item>
        <item>Diplodocus</item>

        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Protoceratops</item>
    </string-array>
    <string-array name="Icon_Dinos">
        <item>@drawable/tyrannousaurus_rex</item>
        <item>@drawable/velociraptor</item>
        <item>@drawable/allosaurus</item>

        <item>@drawable/ankylosaurus</item>
        <item>@drawable/nodocephalosaurus</item>
        <item>@drawable/euoplocephalus</item>

        <item>@drawable/triceratops</item>
        <item>@drawable/styracosaurus</item>
        <item>@drawable/protoceratops</item>

        <item>@drawable/hadrosaurus</item>
        <item>@drawable/parasaurolophus</item>
        <item>@drawable/edmontosaurus</item>

        <item>@drawable/pteranodon</item>
        <item>@drawable/quetzalcoatlus</item>
        <item>@drawable/rhamphorhynchus</item>

        <item>@drawable/brachiosaurus</item>
        <item>@drawable/diplodocus</item>

        <item>@drawable/triceratops</item>
        <item>@drawable/styracosaurus</item>
        <item>@drawable/protoceratops</item>
    </string-array>
    <string-array name="Deskripsi_Dino">
        <item>Salah satu dinosaurus terkenal yang memiliki kepala besar, rahang yang kuat, dan tubuh yang besar</item>
        <item>Dinosaurus berukuran sedang dengan tubuh yang ramping dan cakar tajam di kaki depannya</item>
        <item>Ankylosaurus adalah salah satu anggota Ankylosauria yang terbesar dan paling terkenal. Tubuhnya dilapisi oleh pelat tulang dan dilengkapi dengan deretan duri di sepanjang punggung dan sisi tubuhnya</item>
        <item>Nodocephalosaurus adalah Ankylosauria yang dikenal dari fosil-fosil yang ditemukan di Amerika Utara</item>
        <item>Euoplocephalus adalah Ankylosauria yang dikenal karena pelindung tulang yang mengelilingi tubuhnya dan memiliki gada di ujung ekornya</item>
        <item>Triceratops adalah dinosaurus bertanduk yang paling terkenal dan besar. Mereka memiliki tubuh besar dengan tiga tanduk pada bagian wajahnya dan satu lempeng besar di belakang kepala</item>
        <item>Styracosaurus adalah dinosaurus bertanduk lain yang dikenal dengan lempeng besar di bagian belakang kepala dan tanduk yang menonjol dari hidung dan sudut-sudut matanya</item>
        <item>Hadrosaurus adalah salah satu hadrosauridae yang pertama kali ditemukan dan dinamai pada tahun 1858 di Amerika Utara</item>
        <item>Parasaurolophus adalah hadrosauridae yang dikenal dengan kubah besar pada bagian belakang kepala yang digunakan untuk menghasilkan suara</item>
        <item>Edmontosaurus adalah hadrosauridae yang dikenal dengan rahang yang panjang dan rata serta struktur rahang yang kuat</item>
        <item>Pteranodon adalah pterosaurus yang memiliki sayap besar, paruh panjang, dan kaki yang relatif pendek</item>
        <item>Quetzalcoatlus adalah salah satu pterosaurus terbesar yang pernah hidup, dengan rentang sayap yang sangat luas</item>
        <item>Rhamphorhynchus adalah salah satu pterosaurus yang memiliki tubuh kecil dengan leher panjang dan ekor panjang</item>
        <item>Brachiosaurus adalah dinosaurus pemakan tumbuhan dengan leher panjang dan tubuh besar. Mereka memiliki kaki depan yang lebih panjang daripada kaki belakang, memberikan posisi tubuh yang miring ke depan</item>
        <item>Diplodocus adalah dinosaurus Sauropoda yang memiliki tubuh panjang dan ramping, dengan leher yang sangat panjang dan ekor yang panjang pula. Mereka memiliki kaki yang kuat, tetapi relatif ramping dibandingkan dengan tubuhnya</item>
        <item>Brachiosaurus adalah salah satu dinosaurus Sauropoda terbesar yang pernah hidup. Mereka memiliki leher yang sangat panjang, tubuh besar, dan kaki yang kuat</item>
        <item>Diplodocus adalah dinosaurus Sauropoda dengan tubuh panjang dan ramping, serta leher yang sangat panjang dan ekor yang panjang pula</item>
        <item>Triceratops adalah salah satu dinosaurus bertanduk yang paling terkenal dan besar. Mereka memiliki tubuh besar dengan tiga tanduk pada bagian wajahnya dan satu lempeng besar di belakang kepala</item>
        <item>Styracosaurus adalah dinosaurus bertanduk lain yang dikenal dengan lempeng besar di bagian belakang kepala dan tanduk yang menonjol dari hidung dan sudut-sudut matanya</item>
        <item>Protoceratops adalah dinosaurus bertanduk yang lebih kecil dengan tubuh yang ramping dan tanduk kecil di bagian hidung atau rahangnya</item>
    </string-array>
    <string-array name="Karakteristik_Dino">
        <item>T-Rex adalah pemangsa besar yang dikenal karena kekuatan gigitannya yang kuat dan kemampuan berlari yang cukup cepat</item>
        <item>Velociraptor adalah predator yang cerdas dan berburu dalam kelompok kecil.</item>
        <item>Allosaurus adalah predator yang kuat dan agresif yang memburu secara individu atau dalam kelompok kecil</item>
        <item>Ankylosaurus memiliki kepala yang besar dan lebar dengan gigi-gigi yang cocok untuk mengunyah tumbuhan. Ekornya dilengkapi dengan gada yang keras yang digunakan untuk pertahanan diri</item>
        <item>Sedikit yang diketahui tentang karakteristik atau penampilan Nodocephalosaurus karena kurangnya fosil-fosil yang ditemukan</item>
        <item>Euoplocephalus memiliki tubuh yang relatif pendek dan lebar dengan kepala yang besar dan datar. Pelindung tulangnya terdiri dari pelat-pelat yang terhubung oleh sendi-sendi fleksibel</item>
        <item>Triceratops memiliki tubuh besar dengan kaki yang kuat. Tanduk-tanduknya biasanya digunakan untuk pertarungan dalam persaingan memperebutkan wilayah atau pasangan</item>
        <item>Styracosaurus memiliki tubuh yang besar dengan kaki yang kuat. Tanduk-tanduk dan lempeng belakang kepala mereka mungkin digunakan untuk melindungi diri atau untuk pertarungan antar-individu</item>
        <item>Mereka memiliki tubuh yang besar dengan kaki yang kuat dan rahang bawah yang panjang. Rahang mereka membentuk struktur seperti paruh bebek yang digunakan untuk memakan tumbuhan</item>
        <item>Parasaurolophus memiliki tubuh yang besar dengan kaki yang kuat dan leher yang panjang. Mereka memiliki kubah besar yang terbuat dari tulang di bagian belakang kepala, yang digunakan untuk membuat suara atau untuk pengenalan antar-individu</item>
        <item>Edmontosaurus memiliki tubuh yang besar dengan kaki yang kuat dan rahang bawah yang panjang. Mereka memiliki rahang yang kuat dan efisien untuk mengunyah tumbuhan</item>
        <item>Salah satu ciri khas Pteranodon adalah kubah besar yang terbentuk oleh tulang tengkoraknya, yang mungkin berfungsi sebagai penyeimbang dalam penerbangan. Mereka juga memiliki gigi yang panjang dan runcing di ujung paruhnya</item>
        <item>Quetzalcoatlus memiliki tubuh yang besar dengan leher panjang dan kepala kecil. Mereka memiliki paruh yang lebar dan datar, serta sayap yang sangat besar</item>
        <item>Rhamphorhynchus memiliki sayap yang terhubung langsung ke kaki belakangnya, sehingga membentuk struktur seperti jaring di antara kaki dan sayap. Mereka memiliki paruh yang panjang dan runcing</item>
        <item>Salah satu ciri khas Brachiosaurus adalah leher panjangnya yang memungkinkan mereka mencapai daun-daun tinggi di pohon-pohon. Mereka juga memiliki ekor yang panjang dan bercabang serta kaki yang besar dan kuat</item>
        <item>Salah satu karakteristik utama Diplodocus adalah lehernya yang sangat panjang, yang mungkin mencapai panjang yang lebih dari dua kali panjang tubuhnya. Lehernya membantu mereka mencapai daun-daun tinggi di pohon-pohon</item>
        <item>Salah satu ciri khas Brachiosaurus adalah leher panjangnya yang memungkinkan mereka mencapai daun-daun tinggi di pohon-pohon. Mereka juga memiliki ekor yang panjang dan bercabang serta kaki yang besar dan kuat</item>
        <item>Diplodocus memiliki leher yang sangat panjang, yang membantu mereka mencapai daun-daun tinggi di pohon-pohon. Mereka memiliki kepala kecil dan kaki yang kuat</item>
        <item>Triceratops memiliki tubuh yang besar dengan kaki yang kuat. Tanduk-tanduknya biasanya digunakan untuk pertarungan dalam persaingan memperebutkan wilayah atau pasangan</item>
        <item>Styracosaurus memiliki tubuh yang besar dengan kaki yang kuat. Tanduk-tanduk dan lempeng belakang kepala mereka mungkin digunakan untuk melindungi diri atau untuk pertarungan antar-individu</item>
        <item>Protoceratops memiliki tubuh yang lebih kecil daripada Triceratops dan Styracosaurus. Mereka mungkin kurang agresif dan lebih suka menghindari pertarungan</item>
    </string-array>
</resources>